# Andromeda-Rust

./: Cargo.toml
assets/soundfonts/: Sinufont.sf2
shaders/: piano_roll_bg.frag  piano_roll_note.frag
src/: audio.rs  editor.rs  main.rs  midi.rs  rendering.rs
src/audio/: playback.rs  prerenderer.rs
src/editor/: navigation.rs  project_settings.rs  settings.rs
src/midi/: events.rs  io.rs  notes.rs
src/midi/io/: midi_file.rs  midi_track_parser.rs
src/midi/util/: iter_ext.rs
src/rendering/: piano_roll.rs
